precompiles/macro/tests/compile-fail/precompile/discriminant/type-mismatch-2.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/type-mismatch-2.rs:32:2
   |
32 |     fn discriminant(address: H160) -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
